--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "next": "15.1.7",
+    "next-auth": "^4.24.11",
     "next-connect": "^1.0.0",
     "papaparse": "^5.5.2",
     "prisma": "^6.4.0",
@@ -34,6 +35,7 @@
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19.0.10",
