--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "next-connect": "^1.0.0",
+    "nodemailer": "^6.10.0",
     "papaparse": "^5.5.2",
     "prisma": "^6.4.0",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
@@ -37,6 +38,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19",
