--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.476.0",
     "multer": "^1.4.5-lts.1",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
@@ -30,7 +31,8 @@
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
